M-14 get chat list method added
