# pkg/modelgate/modelgate.pb.go
@@ -886,6 +886,147 @@ func (x *StartResponse) GetChat() *Chat {
 	return nil
 }
 
+// ChatList
+type ChatListRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *ChatListRequest) Reset() {
+	*x = ChatListRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_modelgate_modelgate_proto_msgTypes[16]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ChatListRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ChatListRequest) ProtoMessage() {}
+
+func (x *ChatListRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_modelgate_modelgate_proto_msgTypes[16]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ChatListRequest.ProtoReflect.Descriptor instead.
+func (*ChatListRequest) Descriptor() ([]byte, []int) {
+	return file_modelgate_modelgate_proto_rawDescGZIP(), []int{16}
+}
+
+type ChatListItem struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Id   string `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Name string `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
+}
+
+func (x *ChatListItem) Reset() {
+	*x = ChatListItem{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_modelgate_modelgate_proto_msgTypes[17]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ChatListItem) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ChatListItem) ProtoMessage() {}
+
+func (x *ChatListItem) ProtoReflect() protoreflect.Message {
+	mi := &file_modelgate_modelgate_proto_msgTypes[17]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ChatListItem.ProtoReflect.Descriptor instead.
+func (*ChatListItem) Descriptor() ([]byte, []int) {
+	return file_modelgate_modelgate_proto_rawDescGZIP(), []int{17}
+}
+
+func (x *ChatListItem) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+func (x *ChatListItem) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+type ChatListResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Chats []*ChatListItem `protobuf:"bytes,1,rep,name=chats,proto3" json:"chats,omitempty"`
+}
+
+func (x *ChatListResponse) Reset() {
+	*x = ChatListResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_modelgate_modelgate_proto_msgTypes[18]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ChatListResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ChatListResponse) ProtoMessage() {}
+
+func (x *ChatListResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_modelgate_modelgate_proto_msgTypes[18]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ChatListResponse.ProtoReflect.Descriptor instead.
+func (*ChatListResponse) Descriptor() ([]byte, []int) {
+	return file_modelgate_modelgate_proto_rawDescGZIP(), []int{18}
+}
+
+func (x *ChatListResponse) GetChats() []*ChatListItem {
+	if x != nil {
+		return x.Chats
+	}
+	return nil
+}
+
 var File_modelgate_modelgate_proto protoreflect.FileDescriptor
 
 var file_modelgate_modelgate_proto_rawDesc = []byte{
@@ -973,31 +1114,46 @@ var file_modelgate_modelgate_proto_rawDesc = []byte{
 	0x65, 0x73, 0x74, 0x22, 0x34, 0x0a, 0x0d, 0x53, 0x74, 0x61, 0x72, 0x74, 0x52, 0x65, 0x73, 0x70,
 	0x6f, 0x6e, 0x73, 0x65, 0x12, 0x23, 0x0a, 0x04, 0x63, 0x68, 0x61, 0x74, 0x18, 0x01, 0x20, 0x01,
 	0x28, 0x0b, 0x32, 0x0f, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2e, 0x43,
-	0x68, 0x61, 0x74, 0x52, 0x04, 0x63, 0x68, 0x61, 0x74, 0x32, 0xc3, 0x02, 0x0a, 0x0c, 0x4d, 0x6f,
-	0x64, 0x65, 0x6c, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x5b, 0x0a, 0x04, 0x43, 0x68,
-	0x61, 0x74, 0x12, 0x16, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2e, 0x43,
-	0x68, 0x61, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x17, 0x2e, 0x6d, 0x6f, 0x64,
-	0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2e, 0x43, 0x68, 0x61, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f,
-	0x6e, 0x73, 0x65, 0x22, 0x22, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1c, 0x3a, 0x08, 0x63, 0x68, 0x61,
-	0x74, 0x42, 0x6f, 0x64, 0x79, 0x22, 0x10, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x2f, 0x63, 0x68,
-	0x61, 0x74, 0x2f, 0x63, 0x68, 0x61, 0x74, 0x12, 0x74, 0x0a, 0x0b, 0x4d, 0x65, 0x73, 0x73, 0x61,
-	0x67, 0x65, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x1d, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61,
-	0x74, 0x65, 0x2e, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1e, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74,
-	0x65, 0x2e, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x73,
-	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x26, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x20, 0x3a, 0x04, 0x63,
-	0x68, 0x61, 0x74, 0x22, 0x18, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x2f, 0x63, 0x68, 0x61, 0x74,
-	0x2f, 0x6d, 0x61, 0x73, 0x73, 0x61, 0x67, 0x65, 0x2f, 0x6c, 0x69, 0x73, 0x74, 0x12, 0x60, 0x0a,
-	0x0a, 0x53, 0x74, 0x61, 0x72, 0x74, 0x53, 0x74, 0x61, 0x72, 0x74, 0x12, 0x17, 0x2e, 0x6d, 0x6f,
-	0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2e, 0x53, 0x74, 0x61, 0x72, 0x74, 0x52, 0x65, 0x71,
-	0x75, 0x65, 0x73, 0x74, 0x1a, 0x18, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65,
-	0x2e, 0x53, 0x74, 0x61, 0x72, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1f,
-	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x22, 0x17, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x2f, 0x63,
-	0x68, 0x61, 0x74, 0x2f, 0x73, 0x74, 0x61, 0x72, 0x74, 0x2f, 0x73, 0x74, 0x61, 0x72, 0x74, 0x42,
-	0x36, 0x5a, 0x34, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x79, 0x65,
-	0x61, 0x73, 0x74, 0x6f, 0x72, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2f,
-	0x70, 0x6b, 0x67, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x3b, 0x6d, 0x6f,
-	0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x68, 0x61, 0x74, 0x52, 0x04, 0x63, 0x68, 0x61, 0x74, 0x22, 0x11, 0x0a, 0x0f, 0x43, 0x68, 0x61,
+	0x74, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x32, 0x0a, 0x0c,
+	0x43, 0x68, 0x61, 0x74, 0x4c, 0x69, 0x73, 0x74, 0x49, 0x74, 0x65, 0x6d, 0x12, 0x0e, 0x0a, 0x02,
+	0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12, 0x0a, 0x04,
+	0x6e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65,
+	0x22, 0x41, 0x0a, 0x10, 0x43, 0x68, 0x61, 0x74, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2d, 0x0a, 0x05, 0x63, 0x68, 0x61, 0x74, 0x73, 0x18, 0x01, 0x20,
+	0x03, 0x28, 0x0b, 0x32, 0x17, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2e,
+	0x43, 0x68, 0x61, 0x74, 0x4c, 0x69, 0x73, 0x74, 0x49, 0x74, 0x65, 0x6d, 0x52, 0x05, 0x63, 0x68,
+	0x61, 0x74, 0x73, 0x32, 0xa2, 0x03, 0x0a, 0x0c, 0x4d, 0x6f, 0x64, 0x65, 0x6c, 0x53, 0x65, 0x72,
+	0x76, 0x69, 0x63, 0x65, 0x12, 0x5b, 0x0a, 0x04, 0x43, 0x68, 0x61, 0x74, 0x12, 0x16, 0x2e, 0x6d,
+	0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2e, 0x43, 0x68, 0x61, 0x74, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x17, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65,
+	0x2e, 0x43, 0x68, 0x61, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x22, 0x82,
+	0xd3, 0xe4, 0x93, 0x02, 0x1c, 0x3a, 0x08, 0x63, 0x68, 0x61, 0x74, 0x42, 0x6f, 0x64, 0x79, 0x22,
+	0x10, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x2f, 0x63, 0x68, 0x61, 0x74, 0x2f, 0x63, 0x68, 0x61,
+	0x74, 0x12, 0x74, 0x0a, 0x0b, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x4c, 0x69, 0x73, 0x74,
+	0x12, 0x1d, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2e, 0x4d, 0x65, 0x73,
+	0x73, 0x61, 0x67, 0x65, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
+	0x1e, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2e, 0x4d, 0x65, 0x73, 0x73,
+	0x61, 0x67, 0x65, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22,
+	0x26, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x20, 0x3a, 0x04, 0x63, 0x68, 0x61, 0x74, 0x22, 0x18, 0x2f,
+	0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x2f, 0x63, 0x68, 0x61, 0x74, 0x2f, 0x6d, 0x61, 0x73, 0x73, 0x61,
+	0x67, 0x65, 0x2f, 0x6c, 0x69, 0x73, 0x74, 0x12, 0x60, 0x0a, 0x0a, 0x53, 0x74, 0x61, 0x72, 0x74,
+	0x53, 0x74, 0x61, 0x72, 0x74, 0x12, 0x17, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74,
+	0x65, 0x2e, 0x53, 0x74, 0x61, 0x72, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x18,
+	0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2e, 0x53, 0x74, 0x61, 0x72, 0x74,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19,
+	0x22, 0x17, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x2f, 0x63, 0x68, 0x61, 0x74, 0x2f, 0x73, 0x74,
+	0x61, 0x72, 0x74, 0x2f, 0x73, 0x74, 0x61, 0x72, 0x74, 0x12, 0x5d, 0x0a, 0x08, 0x43, 0x68, 0x61,
+	0x74, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x1a, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74,
+	0x65, 0x2e, 0x43, 0x68, 0x61, 0x74, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x1a, 0x1b, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2e, 0x43, 0x68,
+	0x61, 0x74, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x18,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x12, 0x10, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x2f, 0x63,
+	0x68, 0x61, 0x74, 0x2f, 0x6c, 0x69, 0x73, 0x74, 0x42, 0x36, 0x5a, 0x34, 0x67, 0x69, 0x74, 0x68,
+	0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x79, 0x65, 0x61, 0x73, 0x74, 0x6f, 0x72, 0x2f, 0x6d,
+	0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x6d, 0x6f, 0x64,
+	0x65, 0x6c, 0x67, 0x61, 0x74, 0x65, 0x3b, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x67, 0x61, 0x74, 0x65,
+	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -1012,7 +1168,7 @@ func file_modelgate_modelgate_proto_rawDescGZIP() []byte {
 	return file_modelgate_modelgate_proto_rawDescData
 }
 
-var file_modelgate_modelgate_proto_msgTypes = make([]protoimpl.MessageInfo, 16)
+var file_modelgate_modelgate_proto_msgTypes = make([]protoimpl.MessageInfo, 19)
 var file_modelgate_modelgate_proto_goTypes = []interface{}{
 	(*ChatResponse)(nil),        // 0: modelgate.ChatResponse
 	(*ChatAnswer)(nil),          // 1: modelgate.ChatAnswer
@@ -1030,6 +1186,9 @@ var file_modelgate_modelgate_proto_goTypes = []interface{}{
 	(*Message)(nil),             // 13: modelgate.Message
 	(*StartRequest)(nil),        // 14: modelgate.StartRequest
 	(*StartResponse)(nil),       // 15: modelgate.StartResponse
+	(*ChatListRequest)(nil),     // 16: modelgate.ChatListRequest
+	(*ChatListItem)(nil),        // 17: modelgate.ChatListItem
+	(*ChatListResponse)(nil),    // 18: modelgate.ChatListResponse
 }
 var file_modelgate_modelgate_proto_depIdxs = []int32{
 	1,  // 0: modelgate.ChatResponse.answer:type_name -> modelgate.ChatAnswer
@@ -1046,17 +1205,20 @@ var file_modelgate_modelgate_proto_depIdxs = []int32{
 	13, // 11: modelgate.MessageListResponse.message:type_name -> modelgate.Message
 	7,  // 12: modelgate.Message.category:type_name -> modelgate.Category
 	4,  // 13: modelgate.StartResponse.chat:type_name -> modelgate.Chat
-	9,  // 14: modelgate.ModelService.Chat:input_type -> modelgate.ChatRequest
-	11, // 15: modelgate.ModelService.MessageList:input_type -> modelgate.MessageListRequest
-	14, // 16: modelgate.ModelService.StartStart:input_type -> modelgate.StartRequest
-	0,  // 17: modelgate.ModelService.Chat:output_type -> modelgate.ChatResponse
-	12, // 18: modelgate.ModelService.MessageList:output_type -> modelgate.MessageListResponse
-	15, // 19: modelgate.ModelService.StartStart:output_type -> modelgate.StartResponse
-	17, // [17:20] is the sub-list for method output_type
-	14, // [14:17] is the sub-list for method input_type
-	14, // [14:14] is the sub-list for extension type_name
-	14, // [14:14] is the sub-list for extension extendee
-	0,  // [0:14] is the sub-list for field type_name
+	17, // 14: modelgate.ChatListResponse.chats:type_name -> modelgate.ChatListItem
+	9,  // 15: modelgate.ModelService.Chat:input_type -> modelgate.ChatRequest
+	11, // 16: modelgate.ModelService.MessageList:input_type -> modelgate.MessageListRequest
+	14, // 17: modelgate.ModelService.StartStart:input_type -> modelgate.StartRequest
+	16, // 18: modelgate.ModelService.ChatList:input_type -> modelgate.ChatListRequest
+	0,  // 19: modelgate.ModelService.Chat:output_type -> modelgate.ChatResponse
+	12, // 20: modelgate.ModelService.MessageList:output_type -> modelgate.MessageListResponse
+	15, // 21: modelgate.ModelService.StartStart:output_type -> modelgate.StartResponse
+	18, // 22: modelgate.ModelService.ChatList:output_type -> modelgate.ChatListResponse
+	19, // [19:23] is the sub-list for method output_type
+	15, // [15:19] is the sub-list for method input_type
+	15, // [15:15] is the sub-list for extension type_name
+	15, // [15:15] is the sub-list for extension extendee
+	0,  // [0:15] is the sub-list for field type_name
 }
 
 func init() { file_modelgate_modelgate_proto_init() }
@@ -1257,6 +1419,42 @@ func file_modelgate_modelgate_proto_init() {
 				return nil
 			}
 		}
+		file_modelgate_modelgate_proto_msgTypes[16].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*ChatListRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_modelgate_modelgate_proto_msgTypes[17].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*ChatListItem); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_modelgate_modelgate_proto_msgTypes[18].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*ChatListResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -1264,7 +1462,7 @@ func file_modelgate_modelgate_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_modelgate_modelgate_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   16,
+			NumMessages:   19,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
