# pkg/modelgate/modelgate_grpc.pb.go
@@ -22,6 +22,7 @@ const (
 	ModelService_Chat_FullMethodName        = "/modelgate.ModelService/Chat"
 	ModelService_MessageList_FullMethodName = "/modelgate.ModelService/MessageList"
 	ModelService_StartStart_FullMethodName  = "/modelgate.ModelService/StartStart"
+	ModelService_ChatList_FullMethodName    = "/modelgate.ModelService/ChatList"
 )
 
 // ModelServiceClient is the client API for ModelService service.
@@ -31,6 +32,7 @@ type ModelServiceClient interface {
 	Chat(ctx context.Context, in *ChatRequest, opts ...grpc.CallOption) (*ChatResponse, error)
 	MessageList(ctx context.Context, in *MessageListRequest, opts ...grpc.CallOption) (*MessageListResponse, error)
 	StartStart(ctx context.Context, in *StartRequest, opts ...grpc.CallOption) (*StartResponse, error)
+	ChatList(ctx context.Context, in *ChatListRequest, opts ...grpc.CallOption) (*ChatListResponse, error)
 }
 
 type modelServiceClient struct {
@@ -68,6 +70,15 @@ func (c *modelServiceClient) StartStart(ctx context.Context, in *StartRequest, o
 	return out, nil
 }
 
+func (c *modelServiceClient) ChatList(ctx context.Context, in *ChatListRequest, opts ...grpc.CallOption) (*ChatListResponse, error) {
+	out := new(ChatListResponse)
+	err := c.cc.Invoke(ctx, ModelService_ChatList_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ModelServiceServer is the server API for ModelService service.
 // All implementations must embed UnimplementedModelServiceServer
 // for forward compatibility
@@ -75,6 +86,7 @@ type ModelServiceServer interface {
 	Chat(context.Context, *ChatRequest) (*ChatResponse, error)
 	MessageList(context.Context, *MessageListRequest) (*MessageListResponse, error)
 	StartStart(context.Context, *StartRequest) (*StartResponse, error)
+	ChatList(context.Context, *ChatListRequest) (*ChatListResponse, error)
 	mustEmbedUnimplementedModelServiceServer()
 }
 
@@ -90,6 +102,9 @@ func (UnimplementedModelServiceServer) MessageList(context.Context, *MessageList
 }
 func (UnimplementedModelServiceServer) StartStart(context.Context, *StartRequest) (*StartResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method StartStart not implemented")
+}
+func (UnimplementedModelServiceServer) ChatList(context.Context, *ChatListRequest) (*ChatListResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ChatList not implemented")
 }
 func (UnimplementedModelServiceServer) mustEmbedUnimplementedModelServiceServer() {}
 
@@ -158,6 +173,24 @@ func _ModelService_StartStart_Handler(srv interface{}, ctx context.Context, dec 
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ModelService_ChatList_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ChatListRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ModelServiceServer).ChatList(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ModelService_ChatList_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ModelServiceServer).ChatList(ctx, req.(*ChatListRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // ModelService_ServiceDesc is the grpc.ServiceDesc for ModelService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -176,6 +209,10 @@ var ModelService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "StartStart",
 			Handler:    _ModelService_StartStart_Handler,
+		},
+		{
+			MethodName: "ChatList",
+			Handler:    _ModelService_ChatList_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
